aggiunta evidenziazione oggetti interagibili